--- a/style/headerCSS.css
+++ b/style/headerCSS.css
@@ -1,10 +1,16 @@
 html,body{
 
     font: 100% sans-serif;
-    font-family: 'Quicksand';
+    font-family: 'circular';
     padding: 0;
 
 
+
+}
+
+@font-face {
+    font-family: 'circular';
+    src: url('polices/Circular.otf') format('opentype');
 }
 
 form {
@@ -15,36 +21,45 @@ form {
 
 
 ul {
-    display: table;
+    display: flex;
+    justify-content: space-around; 
     width: 100%;
     margin: 0;
     padding: 0;
-    background: linear-gradient(#53af57, #35dc39);
-
-
-
-
+    background: rgba(0,0,0,0.7);
+    list-style-type: none;
+    z-index: 1;
+    position: fixed;
 
 }
 
+ul li:hover{
+    flex-grow : 0.2;
+    transition: 0.5s;
+    background-color: green;
+    
+}
 ul li {
-    display: table-cell;
-
+    transition: 0.3s;
 }
 
 ul li a {
-    display: block;
+    display: flex;
+    justify-content: center;
     text-align: center;
     color: rgba(256, 256, 256, 1);
     text-decoration: chartreuse;
     padding: 10px 10px 10px 10px;
-    text-shadow: 0 1px 0 rgba(0, 0, 0, 0.6);
+    transition: 0.3s;
+
 
     /* transition: all .3s .1s; */
 }
 
 ul li a:hover,ul li a:focus {
     background: rgba(255, 255, 255, .2);
+    size: 150%;
+    transition: 0.5s;
 }
 
 ul li a:active {
