--- a/style/profilCSS.css
+++ b/style/profilCSS.css
@@ -13,12 +13,15 @@ body, html {
 
 
 
+
 .photoprofil{
     border-radius: 50%;
     display: block;
     margin-left: auto;
     margin-right: auto;
     border: 6px solid #a0ff23;
+    width: 200px;
+    height: auto;
 }
 #conteneurprofil{
     padding-top: 30px;
@@ -83,9 +86,11 @@ body, html {
 
 h2 {
     font-family: 'circular';
+    margin: 10%;
 }
 h3 {
     font-family: 'circular';
+
 }
 
 body {
@@ -107,9 +112,8 @@ body {
 form {
     width:85%;
     padding: 30px;
-    background: #000000;
+    background-color: rgba(0,0,0,0.7);
     box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
-    opacity: 0.7;
     margin-right: 150px;
     margin-left: 80px;
     margin-top: 0px;
@@ -119,7 +123,7 @@ form {
 
 h2{
 
-    font-size: 60px;
+    font-size: 75px;
     text-align: center;
     margin: 0 auto;
     padding-bottom: 4px;
@@ -135,7 +139,7 @@ h2{
 p{
     font-size: 20px;
     color: white;
-    font-family: 'aileron_ultralight';
+    font-family: 'aileron_thin';
 }
 
 #flex_container {
@@ -155,6 +159,7 @@ p{
     text-align: center;
     font-family: 'circular';
 
+
 }
 
 #conteneur {
@@ -165,7 +170,8 @@ p{
 .bouton {
     font-family: 'circular';
     padding-right: 10px;
-    transition: 1s;
+    transition: 0.2s;
+    font-size: 10px;
 
 }
 
@@ -175,6 +181,9 @@ p{
     text-decoration: none;
     padding-right: 10px;
     transition: 1s;
+    display: flex;
+    padding-top: 20px;
+
 }
 
 
