--- a/style/utilisateursCSS.css
+++ b/style/utilisateursCSS.css
@@ -39,17 +39,17 @@ body, html {
 
 h2{
     text-align: center;
-    font-size: 50px;
+    font-size: 75px;
     margin-bottom: 60px;
     color :white;
+
 }
 
 form {
     width:85%;
     padding: 30px;
-    background: #000000;
+    background: rgba(0, 0, 0, 0.7);
     box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
-    opacity: 0.7;
     margin-right: 150px;
     margin-left: 80px;
     margin-top: 0px;
@@ -60,6 +60,7 @@ html {
     background: rgba(173, 173, 173, .1);
     font: 100% sans-serif;
     font-family: 'Quicksand';
+
 }
 
 
@@ -73,15 +74,20 @@ html {
     color: white;
     padding: 20px 35px;
     text-align: center;
-    font-size: 35px;
+    font-size: 25px;
     cursor: pointer;
     display: block;
     margin : auto;
     margin-top: 30px;
+    transition: 0.2s;
+    font-family: 'aileron_thin';
+    
+
 
 
 }
 
 .button:hover {
     background-color: green;
+    transition: 0.2s;
 }
