--- a/style/donneesCSS.css
+++ b/style/donneesCSS.css
@@ -19,15 +19,6 @@ body, html {
     src: url('polices/Aileron-ThinItalic.otf') format('opentype');
 }
 
-
-
-h2 {
-    font-family: 'circular';
-}
-h3 {
-    font-family: 'circular';
-}
-
 body {
     /* The image used */
     background-image: url("Background.jpg");
@@ -42,85 +33,37 @@ body {
     background-attachment: fixed;
 }
 
-
-
-#conteneur {
+form {
     width:85%;
     padding: 30px;
     background: #000000;
     box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
-    opacity: 0.9;
+    opacity: 0.7;
     margin-right: 150px;
     margin-left: 80px;
     margin-top: 0px;
 }
 
-#message {
-    background-color: white;
-    text-align: center;
-    margin: 0 30% ;
-    padding : 0% 5% 1% 5%;
+table{
+    border: 1px solid black;
+    border-collapse: collapse;
+
 }
+td,th{
 
+    border-right: 1px solid
+}
+th{background-color: rgb(192,192,192)
 
+}
+tr:nth-child(odd) {background: #FFF }
+tr:nth-child(even)  {background: #EEE}
 
 h2{
-
-    font-size: 60px;
-    text-align: center;
-    margin: 0 auto;
-    padding-bottom: 4px;
-    color: #a0ff23;
-}
-h3{
     color: white;
     text-align: center;
     font-size: 40px;
     padding-top: 40px;
     padding-bottom: 25px;
 
-}
-
-.line{
-    width: 85%;
-    height: 10px;
-    border-bottom: 1px solid #a0ff23;
-    position: absolute;
-
-
-
-}
-h4{
-    font-family: 'aileron_thin_italic';
-    padding-bottom: 5px;
-    padding-top: 5px;
-    color: green;
-    font-size: 20px;
-}
-p{
-    font-size: 20px;
-    color: black;
-    font-family: 'aileron_ultralight';
-}
-
-
-.button {
-    background-color: #a0ff23;
-    border: none;
-    color: black;
-    padding: 20px 35px;
-    text-align: center;
-    font-size: 35px;
-    cursor: pointer;
-    display: block;
-    margin : auto;
-    border-radius: 5px;
-    font-family: 'aileron_thin';
-    transition: 0.5s;
-}
-
-.button:hover {
-    background-color: green;
-    transition: 0.2s;
-    color: black;
 }
