--- a/style/headerCSS.css
+++ b/style/headerCSS.css
@@ -20,7 +20,7 @@ form {
 
 
 
-ul {
+#header {
     display: flex;
     justify-content: space-around; 
     width: 100%;
@@ -33,17 +33,17 @@ ul {
 
 }
 
-ul li:hover{
+#header li:hover{
     flex-grow : 0.1;
     transition: 0.2s;
     background-color: green;
     
 }
-ul li {
+#header li {
     transition: 0.1s;
 }
 
-ul li a {
+#header li a {
     display: flex;
     justify-content: center;
     text-align: center;
@@ -56,13 +56,13 @@ ul li a {
     /* transition: all .3s .1s; */
 }
 
-ul li a:hover,ul li a:focus {
+#header li a:hover,ul li a:focus {
     background: rgba(255, 255, 255, .2);
     size: 120%;
     transition: 0.5s;
 }
 
-ul li a:active {
+#header li a:active {
     background: linear-gradient(rgba(0, 0, 0, .2), rgba(0, 0, 0, .1));
 
 }
